data/forge_javadoc/1.9.4/raw/net/minecraft/client/gui/GuiClickableScrolledSelectionListProxy.md
---
title: "GuiClickableScrolledSelectionListProxy"
description: "public class GuiClickableScrolledSelectionListProxy extends GuiSlot"
package: "net/minecraft/client/gui"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/client/gui/GuiClickableScrolledSelectionListProxy.html"
sourceType: javadoc
---

# GuiClickableScrolledSelectionListProxy

**Inheritance:** java.lang.Object → net.minecraft.client.gui.GuiSlot → net.minecraft.client.gui.GuiClickableScrolledSelectionListProxy

## Class signature

```java
public class GuiClickableScrolledSelectionListProxy extends GuiSlot
```

## Methods

- `protected void drawBackground()`
- `protected void drawSelectionBox(int insideLeft, int insideTop, int mouseXIn, int mouseYIn)`
- `protected void drawSlot(int entryID, int insideLeft, int yPos, int insideSlotHeight, int mouseXIn, int mouseYIn)`
- `protected void elementClicked(int slotIndex, boolean isDoubleClick, int mouseX, int mouseY)`
- `protected int getContentHeight()`
- `protected int getScrollBarX()`
- `protected int getSize()`
- `void handleMouseInput()`
- `protected boolean isSelected(int slotIndex)`
- `int mouseX()`
- `int mouseY()`
- `void renderSelected(int p_178043_1_, int p_178043_2_, int p_178043_3_, Tezzelator p_178043_4_)`
- `int width()`

## Fields

- `GuiClickableScrolledSelectionListProxy`
