data/forge_javadoc/1.12.2/raw/net/minecraft/client/gui/GuiClickableScrolledSelectionListProxy.md
---
title: "GuiClickableScrolledSelectionListProxy"
description: "public class GuiClickableScrolledSelectionListProxy extends GuiSlot"
package: "net/minecraft/client/gui"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/client/gui/GuiClickableScrolledSelectionListProxy.html"
sourceType: javadoc
---

# GuiClickableScrolledSelectionListProxy

**Inheritance:** java.lang.Object → net.minecraft.client.gui.GuiSlot → net.minecraft.client.gui.GuiClickableScrolledSelectionListProxy

## Class signature

```java
public class GuiClickableScrolledSelectionListProxy extends GuiSlot
```

## Methods

- `protected void drawBackground()`
- `protected void drawSelectionBox(int insideLeft, int insideTop, int mouseXIn, int mouseYIn, float partialTicks)`
- `protected void drawSlot(int slotIndex, int xPos, int yPos, int heightIn, int mouseXIn, int mouseYIn, float partialTicks)`
- `protected void elementClicked(int slotIndex, boolean isDoubleClick, int mouseX, int mouseY)`
- `protected int getContentHeight()`
- `protected int getScrollBarX()`
- `protected int getSize()`
- `void handleMouseInput()`
- `protected boolean isSelected(int slotIndex)`
- `int mouseX()`
- `int mouseY()`
- `void renderSelected(int p_178043_1_, int p_178043_2_, int p_178043_3_, Tezzelator p_178043_4_)`
- `int width()`

## Fields

- `GuiClickableScrolledSelectionListProxy`
